# criminal_face_recog

./: .gitignore  environment.yml  mysql.sql
app/: .gitignore  Cargo.toml
app/src/: database.rs  db.rs  lib.rs  main.rs  pain.rs  python_process.rs  python_wrapper.rs  rain.rs  rust.py  webcam_task.rs
app/src/components/: button.rs  image_viewer.rs  input_label.rs  mod.rs  res.txt  text_input.rs  video_viewer.rs
app/src/entities/: criminal.rs  criminal_photo.rs  mod.rs
app/src/helper/: mod.rs  photo_display.rs
app/src/pages/: criminal_image_find.rs  criminal_registry.rs  criminal_video_find.rs  criminal_webcam_find.rs  main_menu.rs  mod.rs
model_engine/: Requirements.txt  database.py  main.py  setup.txt
