[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
iced = { version = "0.12", features = ["tokio", "image"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
message = "0.1.0"
rfd = "0.16.0"
sea-orm = { version = "1.0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
sea-query = "0.32.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
mpsc = "0.2.6"

[dependencies.zune-jpeg]
version = "0.5.7"
default-features = false
